# ckb-lib-c-script

./: .gitignore  .gitmodules  Cargo.toml  README.md
c/: Makefile  ckb_smt.c  ckb_smt.symc
c/tests/: unit_test.cpp
ckb-lib-rsa/: Cargo.toml  build.rs
ckb-lib-rsa/lib/: rsa_sighash_all
ckb-lib-rsa/src/: code_hashes.rs  lib.rs  librsa.rs
ckb-lib-rsa/tests/: test_c_file.rs
ckb-lib-secp256k1/: Cargo.toml  build.rs
ckb-lib-secp256k1/c-build/: secp256k1_blake2b_sighash_all_dual
ckb-lib-secp256k1/lib/: secp256k1_blake2b_sighash_all_dual
ckb-lib-secp256k1/src/: code_hashes.rs  lib.rs  libsecp256k1.rs
ckb-lib-secp256k1/tests/: test_c_file.rs
ckb-lib-smt/: Cargo.toml  build.rs
ckb-lib-smt/c-build/: ckb_smt
ckb-lib-smt/src/: code_hashes.rs  lib.rs  libsmt.rs
ckb-lib-smt/tests/: test_c_file.rs
