[package]
authors = ["johnz <johnz@lay2.dev>"]
edition = "2018"
name = "ckb-lib-rsa"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7"
email-rs = {git = "https://github.com/sking789/email-rs.git"}
sha2 = {version = "0.9.2", default-features = false}

[build-dependencies]
blake2b-rs = "0.1.5"

[build]
target = "riscv64gc-unknown-linux-gnu"