[package]
authors = ["johnz <johnz@lay2.dev>"]
edition = "2018"
name = "ckb-lib-rsa"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = {version = "0.7",optional = true}
email-rs = {git = "https://github.com/sking789/email-rs.git",optional = true}
sha2 = {version = "0.9.2", default-features = false,optional = true}

[build-dependencies]
blake2b-rs = "0.1.5"

[features]
std = []
no_std = ["ckb-std","email-rs","sha2"]
c_file = ["std"]