[package]
name = "ckb-lib-secp256k1"
version = "0.1.1"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
description = "CKB secp256k1 dynamic linking library"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = {version = "0.9",optional = true}

[build-dependencies]
blake2b-rs = "0.1.5"

[features]
no_std = ["ckb-std"]
c_file = []
default = ["no_std"]