[package]
name = "ckb-lib-smt"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { version = "0.9", optional = true }


[build-dependencies]
blake2b-rs = "0.2"
cc = "1.0"

[features]
no_std = ["ckb-std"]
c_file = []
default = ["no_std"]